--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         go-version: 1.19
 
+    - name: Install libusb
+      run: sudo apt-get install libusb-1.0-0-dev
+
     - name: Build
       run: go build -v ./...
 
