--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: sudo apt-get install libusb-1.0-0-dev
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v
 
     - name: Test
-      run: go test -v ./...
+      run: go test $(go list ./... | grep -v util/account/usb)
